<resources>
    <string name="app_name">বাংলাদেশের ভেষজ উদ্ভিদ</string>
    <string name="title_home">বাংলাদেশের ভেষজ উদ্ভিদ</string>
    <string name="title_activity_tree_list">ভেষজ উদ্ভিদের তালিকা</string>
    <string name="title_activity_thankuni">থানকুনি</string>
    <string name="scientific_name">বৈজ্ঞানিক নাম:</string>
    <string name="usage_part_title">উপকারী অংশ:</string>
    <string name="usage_title">ব্যাবহার:</string>
    <string name="title_bell">বেল</string>
    <string name="scientific_name_bell">Aegle marmelos</string>
    <string name="usage_parts_bell">বেলের পাতা,ফুল ও ফল মানব দেহের জন্য খুবই উপকারী। ফলের শাঁসে রয়েছে প্রচুর শর্করা,উদ্বায়ী তেল,এ্যালকোহল,তারপিন,ট্যানিন,প্রোটিন,খনিজ পদার্থ ও ভিটামিন। বেলের ছালে ও মুলে রয়েছে উপক্ষার,গ্লাইকোসাইড,কিউমারিন,অত্যাবশকীয় তেল।</string>
    <string name="usage_bell">১। দীর্ঘদিনের আমাশয়ের চিকিৎসায় বেল অত্যন্ত কার্যকরী। কচি কাঁচা বেল চাকা চাকা করে কেটে রোদে শুকিয়ে বেলশুট তৈরী করে নিতে হয় প্রথমে। বেল ফল থেকে তৈরী ২/৩টি বেলশুট সন্ধ্যায় ১ কাপ পানি ভিজিয়ে রেখে সকালে খালি পেটে খেতে হবে ১ মাস। এতে পুরাতন আমাশয় সম্পূর্ণ ভালো হয়।\n\n২। বেল পাতার পুড়িয়ে ছাই দিয়ে নিয়মিত দাঁত মাজলে মুখের র্দূগন্ধ দুর হয় ও দাতেঁর মাড়ি শক্ত সবল হয়।\n\n৩। পাকা বেলের শাঁস পানি মিশিয়ে শরবত করে খেলে বদহজম দুর হয়। হজম শক্তি বাড়ে। শরীর ঠান্ডা হয় সাথে সাথে।	    </string>
    <string name="title_activity_bell">বেল</string>
    <string name="title_thankuni">থানকুনি</string>
    <string name="scientific_name_thankuni">Centella asiatica</string>
    <string name="usage_parts_thankuni">সম্পূর্ণ থানকুনি পাতা।</string>
    <string name="usage_thankuni">১। নিয়মিত থানকুনি পাতার রস খেলে ত্বক ও চুল সুন্দর থাকে।\n২। জ্বর, পেটের পীড়া, আমাশয়, আলসার, বাতসহ অনেক রোগের ওষুধ হিসেবে এটি ব্যবহৃত হয়।\n৩। মুখের ভিতরে ঘা হলে থানকুনি পাতা সিদ্ধ পানি দিয়ে কুলি করলে ঘা কমে যায়।\nবাচ্চাদের কথা স্পষ্ট না হলে প্রতিদিন এক চামচ থানকুনি পাতার রস গরম করে খাওয়ালে কথা স্পষ্ট হয়।\n৪। এছাড়া ঠাণ্ডা-কাশি হলে ১ টেবিল চামচ থানকুনির রসের সঙ্গে মধু মিশিয়ে খেলে ভালো ফল পাওয়া যায়।\n৫। যাদের স্নায়ুতন্ত্র দুর্বল, তারা নিয়মিত থানকুনি পাতা খেলে স্মৃতিশক্তি বৃদ্ধি পায়।</string>
    <string name="title_basok">বাসক</string>
    <string name="scientific_name_basok">Adhatoda vasica</string>
    <string name="usage_parts_basok">তাজা অথবা শুকানো পাতা ওষুধের কাজে লাগে। এর মূল, পাতা, ফুল, ছাল সবই ব্যবহার হয়।</string>
    <string name="usage_basok">১. বাসক পাতার রস ১-২ চামচ হাফ থেকে এক চামচ মধুসহ খেলে শিশুর সদির্কাশি উপকার পাওয়া যায়।\n২. বাসক পাতার রস স্নানের আধ ঘন্টা আগে মাথায় কয়েকদিন মাখলে উকুন মরে যায়। আমবাত ও ব্রণশোথে (ফোঁড়ার প্রাথমিক অবস্থা) বাসক পাতা বেটে প্রলেপ দিলে ফোলা ও ব্যথা কমে যায়।\n৩. যদি বুকে কফ জমে থাকে এবং তার জন্যে শ্বাসকষ্ট হলে বা কাশি হলে বাসক পাতার রস ১-২ চামচ এবং কন্টিকারীরস ১-২ চামচ, ১ চামচ মধুসহ খেলে কফ সহজে বেরিয়ে আসে।\n৪. প্রস্রাবে জ্বালা-যন্ত্রনা থাকলে বাসকের ফুল বেটে ২-৩ চামচ মিছরি ১-২ চামচ সরবত করে খেলে এই রোগে উপকার পাওয়া যায়।\n৫. জ্বর হলে বা অল্প জ্বর থাকলে বাসকের মূল ৫-১০ গ্রাম ধুয়ে থেঁতো করে ১০০ মিলি লিটার জলে ফোটাতে হবে।\n৬. ২৫ মিলি লিটার থাকতে নামিয়ে তা ছেঁকে নিয়ে দিনে ২ বার করে খেলে জ্বর এবং কাশি দুইই চলে যায়।\n৭. বাসকের কচিপাতা ১০-১২ টি এক টুকরো হলুদ একসঙ্গে বেটে দাদ বা চুলকানিতে লাগলে কয়েকদিনের মধ্যে তা সেরে যায়।\n৮. বাসকপাতা বা ফুলের রস ১-২ চামচ মধু বা চিনি ১চামচসহ প্রতিদিন খেলে জন্ডিস রেগে উপকার পাওয়া যায়।\n৯. পাইরিয়া বা দাঁতের মাড়ি দিয়ে রক্ত পড়লে বাসক পাতা ২০ টি থেঁতো করে ২ কাপ জলে সিদ্ধ করে ১ কাপ থাকতে নামিয়ে ঈষদুষ্ণ অবস্থায় কুলকুচি করলে এই রোগে উপকার পাওয়া যায়।</string>
    <string name="title_activity_basok">বাসক</string>
    <string name="title_durba">দূর্বা</string>
    <string name="scientific_name_durba">Cynodon dactylon</string>
    <string name="usage_parts_durba">সম্পূর্ণ অংশ। ট্রাইটারপিনয়েডস,প্রোটিন ও মর্করা থাকে। এছাড়া জৈব এসিড পাওয়া যায়।</string>
    <string name="usage_durba">১।  কাটা স্থানে দূর্বাঘাস বেটে বা দাঁত দিয়ে থেতলে লাগালে সঙ্গে সঙ্গে রক্ত ঝরা বন্ধ হয়।\n২। কোনোভাবেই মেযেদের ঋতুস্রাব হচ্ছে না এরকম হলে দূর্বাঘাস বেটে এককাপ রস খেলে দারুন উপকার পাওয়া যায়।\n৩। প্রতিদিন সকালে খালি পেটে এক কাপ দূর্বা ঘাসের রসের সাথে সামান্য আখের রস মিশিয়ে খেলে অশ্বরোগ আরোগ্য হয়।\n৪। দূর্বার কচি ডগা সামান্য সরিষার তেলসহ দাঁতের গর্ত করা স্থানে দিলে জীবাণু মারা যায় ও উপকার হয়।\n৫। পায়ের একজিমা হলে চুলকিয়ে দূর্বাঘাসের রস দিলে কয়েকদিনে ভালো হয়।\n৬। অরুচি,শ্রান্তি,পিত্তদাহ,বমি ও রক্ত দোষ নাশক হিসাবে কাজ করে। এ ক্ষেত্রে দূর্বার মুল সমপরিমান দূর্বার পাতার রস ও পানি জ্বাল দিয়ে ক্বাথ তৈরী করে ক’দিন খেলে উপকার পাওয়া যায়।\n৭। মুখের ব্রন সাড়াতে এককাপ দূর্বার রস এককাপ পুরাতন ঘি ভেজে মুখ ধুয়ে লাগালে ব্রন ভালো হয়।\n৮। একভাগ দূর্বার রস একভাগ তিলের তেল তিনমাস নিয়মিত সপ্তাহে দুই দিন মাথায় দিলে চুলপড়া বন্ধ হয়।\n৯। শরীরের বাত ব্যাথা রোগ হলে দূর্বার রস তার সমপরিমান কাঁচা হলুদ একসঙ্গে বেটে সমান পরিমান দুধের সাথে মিশিয়ে খেলে ভালো হয়।\n১০। দাঁতের পায়োরিয়া সাড়াতে দূর্বা ঘাসের রস ও দুধ মিশিয়ে দাঁত মাজলে পায়োরিয়া ভালো হয়।</string>
    <string name="title_activity_durba">দূর্বা</string>
    <string name="title_bohera">বহেড়া</string>
    <string name="scientific_name_bohera">Terminali belerica</string>
    <string name="usage_parts_bohera">বহেড়ার ফল বিভিন্ন কাজে লাগে।</string>
    <string name="usage_bohera">* ইন্দ্রিয়-দৌর্বল্যেঃ এ রোগ থেকে মুক্তি পেতে হলে রোজ দু’টি করে বহেড়া বিচীর শাঁস খান।\n
* শ্বেতী রোগেঃ বহেড়া বিচির শাঁসের তেল বের করে শ্বেতীর ওপর লাগালে গায়ের রং অল্পদিনের মধ্যেই স্বাভাবিক হবে। অকালে টাক পড়লেঃ বহেড়া বিচির শাঁস অল্প পানিতে মিহি করে বেটে চন্দনের মতো টাকে লাগালে, টাক সেরে যায়।\n
* শ্লেস্মায়ঃ আধা চা-চামচ বহেড়া চূর্ণ, ঘি গরম করে তার সাথে মিশিয়ে আবার গরম করে মধু মিশিয়ে চেটে খেলে উপরকার পাওয়া যায়।\n
* আমাশয়ঃ সাদা বা রক্ত যে কোনও আমাশয়ে প্রতিদিন সকালে পানির সাথে বহেড়া চূর্ণ খেলে উপকার পাওয়া যায়।\n
* অকালে চুল পাকলেঃ বহেড়ার বিচি বাদ দিয়ে ১০ গ্রাম ছাল নিয়ে পানি দিয়ে বাটুন। এক কাপ পানিতে গুলে পানিতে ছেঁকে নিন, এবার সে পানি দিয়ে চুল ধুয়ে ফেলুন। </string>
    <string name="title_activity_bohera">বহেড়া</string>
    <string name="title_kalmegh">কালমেঘ</string>
    <string name="scientific_name_kalmegh">Andrographis paniculata</string>
    <string name="usage_parts_kalmegh">শিকড় ব্যতীত কালমেঘ গাছটির সব অংশই ঔষুধের কাজে লাগে।</string>
    <string name="usage_kalmegh">জ্বর, কৃমি, আমাশয়, সাধারণ শারীরিক দুর্বলতা এবং বায়ু আধিক্যে কালমেঘ অত্যন্ত উপকারী।শিশুদের যকৃৎ রোগে এবং হজমের সমস্যায় কালমেঘ ফলপ্রদ। কালমেঘের পাতা থেকে তৈরী আলুই পশ্চিম বাংলার ঘরোয়া ঔষুধ যা পেটের অসুখে শিশুদের দেওয়া হয়। টাইফয়েড রোগে এবং জীবানুরোধে কালমেঘ কার্য্করী।কালমেঘ গাছের পাতার রস জ্বর, কৃমি, অজীর্ণ, লিভার প্রভৃতি রোগের চিকিৎসায় ব্যবহৃত হয়। কোষ্ঠকাঠিন্য হলে পাতার রস মধুর সঙ্গে মিশিয়ে খাওয়ানো হয়।</string>
    <string name="title_activity_kalmegh">কালমেঘ</string>
    <string name="title_nim">নিম</string>
    <string name="scientific_name_nim">Melia azadirachta</string>
    <string name="usage_parts_nim">ডাল, পাতা, রস, সবই কাজে লাগে।</string>
    <string name="usage_nim">* কফজনিত বুকের ব্যথা: অনেক সময় বুকে কফ জমে বুক ব্যথা করে। এ জন্য ৩০ ফোটা নিম পাতার রশ সামান্য গরম পানিতে মিশিয়ে দিতে ৩/৪ বার খেলে বুকের ব্যথা কমবে। গর্ভবতী,শিশু ও বৃদ্ধদের জন্য এ ঔষধটি নিষেধ।\n
        * কৃমি: পেটে কৃমি হলে শিশুরা রোগা হয়ে যায়। পেটে বড় হয়। চেহারা ফ্যকাশে হয়ে যায়। এ জন্য ৫০ মিলিগ্রাম পরিমাণ নিম গাছের মূলের ছালের গুড়া দিন ৩ বার সামান্য পানি গরমসহ খেতে হবে।\n
* উকুন নাশ: নিমের পাতা বেটে হালকা করে মাথায় লাগান। ঘন্টা খানেক ধরে মাথা ধুয়ে ফেলুন। ২/৩ দিন এভাবে লাগালে উকুন মরে যাবে। \n
* অজীর্ণ: অনেকদিন ধরে পেটে অসুখ। পাতলা পায়খানা হলে ৩০ ফোটা নিম পাতার রস, সিকি কাপ পানির সঙ্গে মিশিয়ে সকাল- বিকাল খাওয়ালে উপকার পাওয়া যাবে।\n
* খোস পাচড়া: নিম পাতা সিদ্ধ করে পানি দিয়ে গোসল করলে খোসপাচড়া চলে যায়। পাতা বা ফুল বেটে গায়ে কয়েকদিন লাগালে চুলকানি ভালো হয়।</string>
    <string name="title_activity_nim">নিম</string>
    <string name="title_tulsi">তুলসী</string>
    <string name="scientific_name_tulsi">Ocimum sanctum</string>
    <string name="usage_parts_tulsi">পাতা কাজে লাগে।</string>
    <string name="usage_tulsi">* জ্বর হলে জলের মধ্যে তুলসী পাতা, গোল মরিচ এবং মিশ্রী মিশিয়ে ভাল করে সেদ্ধ করুন ৷ অথবা তিনটে দ্রব্য মিশিয়ে বড়ি তৈরি করুন ৷ দিনের মধ্যে তিন-চার বার ঐ বড়িটা জলের সঙ্গে খান ৷ জ্বর খুব তাড়াতাড়ি সেরে যাবে।\n
* কাশি যদি না কমে সেই ক্ষেত্রে তুলসী পাতা এবং আদা পিষে মধুর সঙ্গে মিশিয়ে খান ৷ এতে উপকার পাবেন ৷\n
* পেট খারাপ হলে তুলসীর ১০ টা পাতা সামান্য জিরের সঙ্গে পিষে ৩-৪ বার খান ৷ পায়খানা একেবারে বন্ধ হয়ে যাবে, মানে পায়খানার ওই সমস্যাটা আর কি!\n
* মুখের দুর্গন্ধ দূর করতে দিনে ৪-৫ বার তুলসী পাতা চেবান ৷ \n
* ঘা যদি দ্রুত কমাতে চান তাহলে তুলসী পাতা এবং ফিটকিরি একসঙ্গে পিষে ঘা এর স্থানে লাগান, কমে যাবে ৷\n
* বুদ্ধি এবং স্মরণশক্তি বাড়ানোর জন্য প্রতিদিন ৫-৭ টা তুলসী পাতা চিবান ৷ \n
* কীট-পতঙ্গ কামড়ালে: বোলতা, ভীমরুল, বিছা প্রভৃতি বিষাক্ত কীট-পতঙ্গ কামড়ালে ঐ স্থানে তুলসী পাতার রস গরম করে লাগালে জ্বালা-যন্ত্রণা কম হয়।\n
* সর্দি: যারা সহজেই সর্দিতে আক্রান্ত হয় (বিশেষ করে শিশুদের) তারা কিছুদিন ৫ ফোঁটা মধুর সাথে ১০ ফোঁটা রস খেলে সর্দি প্রবণতা দূর হয়। \n</string>
    <string name="title_activity_tulsi">তুলসী</string>
    <string name="title_noyontara">নয়ন তারা</string>
    <string name="scientific_name_noyontara">Vinca rosea</string>
    <string name="usage_parts_noyontara">নয়নতারা ফুলের গাছে ৬০ টিরও বেশি উপ ক্ষার রয়েছে।এর মধ্যে ভিনক্রিস্টিন ও ভিনব্লাস্টিন লিউকেমিয়া রোগের ওষুধ হিসাবে ব্যবহার করা হয়। দুইটি secoiridoial glucosides,ursolic acid, oleanolic acid আছে। </string>
    <string name="usage_noyontara">*উচ্চ রক্তচাপে নয়নতারার একটি গাছ ও শুকনো মুলের ১ গ্রাম,কাচাঁ হলুদ ২ গ্রাম থেতলে এক কাপ পানিতে সিদ্ধ করে ক্বাথ করে নিয়ে এক চতুর্থাংশ সিদ্ধ কাথ সকাল ও বিকাল দু’বেলা ৮/১০ দিন খেলে রক্ত চাপ কমে। ক্বাথটি ৫/৬ দিন খেলে কৃমির উপদ্রব কমে এবং ১৫/২০দিন খেলে কৃমি থেকে রোগমুক্ত হওয়া যায়। এছাড়া এতে ডায়াবেটিক রোগও নিয়ন্ত্রিত হয়। 
\nউচ্চ রক্তচাপ রোগে সাত দিন নয়নতারার পাতা খেলে রক্তচাপ কমে। এক্ষেত্রে প্রথম দিন ১ কাপ গরম পানিতে ১টি, দ্বিতীয় দিন এক কাপ পানিতে ২টি, তৃতীয় দিন ৩টি, চতুর্থদিন ৪টি, পঞ্চমদিন ৫টি, সপ্তম দিন ৭টি পাতা দিয়ে গরম পানি খেতে উচ্চ রক্তচাপ নিয়ন্ত্রণে আসে।</string>
    <string name="title_activity_noyontara">নয়ন তারা</string>
    <string name="title_lojjaboti">লজ্জ্বাবতী</string>
    <string name="scientific_name_lojjaboti">Mimosa pudica</string>
    <string name="usage_parts_lojjaboti">পাতা ও মুল। পাতায় এ্যাকোলয়েড ও এড্রেনালিন এর সব উপকরণ থাকে। এছাড়ও (turgorins) টিউগুরিনস্ এবং মুলে ট্যানিন থাকে।  </string>
    <string name="usage_lojjaboti">দাতেঁর মাঢ়ির ক্ষত সাড়াতে গাছসহ ১৫ থেকে ২০ সে.মি. লম্বা মূল পানিতে সিদ্ধ করে সে পানি দিয়ে কয়েক দিন দিনে ৩ বার কুলকুচা করলে ভালো হয়। সাদা ফুলের লজ্জ্বাবতীর পাতা ও মুল পিষে রস বের করে নিয়মিত খেলে পাইলস্ ও ফিস্টুলায় আরাম পাওয়া যায়।</string>
    <string name="title_kashraj">কেশরাজ</string>
    <string name="scientific_name_kashraj">Ectipta prostrata</string>
    <string name="usage_parts_kashraj">পাতা,কাণ্ড,ফুল ও ফল। এই উদ্ভিদে এ্যালকোলয়েড স্টেরল,ইউডে লোল্যাকটোন,লিউটেইওলিন,গ্লাইকোসাইড,ট্রিটারপেন,গ্লাইকোসাইড এবং ফাইটেস্টেরল বিদ্যমান।  </string>
    <string name="title_kholke">কলকে</string>
    <string name="scientific_name_kholke">Thevetia peruviana</string>
    <string name="usage_parts_kholke">কলকের ছাল,পাতা ও বীজ। ছালে কার্ডিওএকটিভ,গ্লাইকোসাইড থাকে। পাতা ও বীজে গ্লাইকোসাইড রয়েছে। </string>
    <string name="usage_kholke">ছাল ও বীজে কর্ডিয়াক টনিক ও কাডর্য়িাক স্টিমুলেন্ট হিসাবে ব্যবহার করা হয়। শক্তিশালী রেচক । পাতাতেও একই ধরনের গুণাগুণ রয়েছে। বীজ অত্যন্ত বিষাক্ত।বীজ ব্যবহার করে গর্ভবতী মায়েদের গর্ভপাত ঘটানো যায়। বাতরোগে ও পা ফোলা রোগে কয়েকটি বীজ বেটে পেস্ট তৈরী করে আক্রান্ত স্থানে নিয়মিত কয়েকদিন লাগালে পা ফোলা ও বাতরোগ ভালো।</string>
    <string name="title_sharpaghandha">সর্পগন্ধা</string>
    <string name="title_anjon">অঞ্জন</string>
    <string name="title_akondo">আকন্দ</string>
    <string name="title_koloskathi">শ্বেতদ্রোণ বা দ-কলস বা কলসকাঠি </string>
    <string name="about_title">অ্যাপলিকেশন সম্পর্কে</string>
</resources>