<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".TreeListActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/title_home"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <Button
                android:id="@+id/anjonButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/green_button"
                android:text="@string/title_anjon" />

            <Button
                android:id="@+id/akondoButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/green_button"
                android:text="@string/title_akondo" />

            <Button
                android:id="@+id/kalmeghButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/green_button"
                android:text="@string/title_kalmegh" />

            <Button
                android:id="@+id/kholkeButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/green_button"
                android:text="@string/title_kholke" />

            <Button
                android:id="@+id/kashrajButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/green_button"
                android:text="@string/title_kashraj" />

            <Button
                android:id="@+id/koloskathiButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/green_button"
                android:text="@string/title_koloskathi" />

            <Button
                android:id="@+id/tulsiButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/green_button"
                android:text="@string/title_tulsi" />

            <Button
                android:id="@+id/thankuniButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/green_button"
                android:text="@string/title_thankuni" />

            <Button
                android:id="@+id/durbaButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/green_button"
                android:text="@string/title_durba" />

            <Button
                android:id="@+id/noyontaraButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/green_button"
                android:text="@string/title_noyontara" />

            <Button
                android:id="@+id/nimButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/green_button"
                android:text="@string/title_nim" />

            <Button
                android:id="@+id/basokButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/green_button"
                android:text="@string/title_basok" />

            <Button
                android:id="@+id/bellButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_bell"
				android:background="@drawable/green_button"/>

            <Button
                android:id="@+id/boheraButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/green_button"
                android:text="@string/title_bohera" />

            <Button
                android:id="@+id/lojjabotiButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/green_button"
                android:text="@string/title_lojjaboti" />
            <Button
                android:id="@+id/sharpaghandhaButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/green_button"
                android:text="@string/title_sharpaghandha" />
            
         
        </LinearLayout>

    </ScrollView>

</LinearLayout>