<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:orientation="vertical"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".KholkeActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/title_kholke"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
	        <LinearLayout
	            android:id="@+id/tableRow1"
	            android:layout_width="match_parent"
	            android:layout_height="match_parent"
	            android:orientation="horizontal"
	            android:layout_marginBottom="5dp" >

	            <TextView
	                android:id="@+id/textView2"
	                android:layout_weight="1"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/scientific_name"
	                android:textAppearance="?android:attr/textAppearanceMedium"  />

	            <TextView
	                android:id="@+id/textView3"
	                android:layout_weight="3"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:enabled="true"
	                android:text="@string/scientific_name_kholke"
	                android:textAppearance="?android:attr/textAppearanceMedium" 
	                android:textStyle="italic" />

	        </LinearLayout>

	        <ImageView
	            android:id="@+id/imageView1"
	            android:layout_width="300dp"
	            android:layout_height="250dp"
	            android:layout_gravity="center_horizontal"
	            android:src="@drawable/kholke" />

	        <TextView
	            android:id="@+id/textView4"
	            android:layout_marginTop="10dp"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/usage_part_title"
	            android:textAppearance="?android:attr/textAppearanceMedium" />

	        <TextView
	            android:id="@+id/textView5"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/usage_parts_kholke" />
	        <TextView
	            android:id="@+id/textView6"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/usage_title"
	            android:textAppearance="?android:attr/textAppearanceMedium" />

	        <TextView
	            android:id="@+id/textView7"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/usage_kholke" />

        </LinearLayout>


    </ScrollView>

</LinearLayout>